--- a/.github/workflows/introspect.yml
+++ b/.github/workflows/introspect.yml
@@ -31,5 +31,6 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
+    - run: npm install
     - run: npm run introspect
     - run: npm run commit
