--- a/.github/workflows/introspect.yml
+++ b/.github/workflows/introspect.yml
@@ -31,6 +31,11 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
+    - run: |
+        touch .env
+        echo SHOP_HANDLE =${{ secrets.SHOP_HANDLE }} >> .env
+        echo API_VERSION =${{ secrets.API_VERSION }} >> .env
+        echo API_KEY =${{ secrets.API_KEY }} >> .env
     - run: npm install
     - run: npm run introspect
     - run: npm run commit
