--- a/.github/workflows/introspect.yml
+++ b/.github/workflows/introspect.yml
@@ -2,13 +2,13 @@
 
 name: Introspect
 
-# Controls when the action will run. 
+# Controls when the action will run.
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    branches: [ main ]
+    branches: [main]
   pull_request:
-    branches: [ main ]
+    branches: [main]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -19,23 +19,37 @@ jobs:
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-    
+
     strategy:
       matrix:
         node-version: [14.x]
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-    - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
-      with:
-        node-version: ${{ matrix.node-version }}
-    - run: |
-        touch .env
-        echo SHOP_HANDLE =${{ secrets.SHOP_HANDLE }} >> .env
-        echo API_VERSION =${{ secrets.API_VERSION }} >> .env
-        echo API_KEY =${{ secrets.API_KEY }} >> .env
-    - run: npm install
-    - run: npm run introspect
-    - run: npm run commit
+      - uses: actions/checkout@v2
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node-version }}
+      - run: |
+          touch .env
+          echo SHOP_HANDLE =${{ secrets.SHOP_HANDLE }} >> .env
+          echo API_VERSION =${{ secrets.API_VERSION }} >> .env
+          echo API_KEY =${{ secrets.API_KEY }} >> .env
+      - run: npm install
+      - run: npm run introspect
+      - name: move to dir # Move the generated files into output folder
+        run: |
+          mkdir -p output
+          yes| cp -rf ${{ secrets.API_VERSION }}.gql ./output/
+      - name: Commit files # commit the output folder
+        run: |
+          git config --local user.email "bot@example.com"
+          git config --local user.name "Bot"
+          git add ./output
+          git commit -m "Update introspection file"
+      - name: Push changes # push the output folder to your repo
+        uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          force: true
