--- a/.github/workflows/introspect.yml
+++ b/.github/workflows/introspect.yml
@@ -9,8 +9,8 @@ on:
     branches: [main]
   pull_request:
     branches: [main]
-
-  # Allows you to run this workflow manually from the Actions tab
+  schedule:
+    - cron: "0 2 * * 1-5"
   workflow_dispatch:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
