--- a/.github/workflows/introspect.yml
+++ b/.github/workflows/introspect.yml
@@ -4,6 +4,11 @@ name: Introspect
 
 # Controls when the action will run.
 on:
+  # Triggers the workflow on push or pull request events but only for the main branch
+  push:
+    branches: [main]
+  pull_request:
+    branches: [main]
   schedule:
     - cron: "0 2 * * 1-5"
   workflow_dispatch:
